--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -354,7 +354,7 @@
           Hvilken størrelse buket ønsker du?
         </h1>
         <p
-          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/3 lg:py-l-spacing-desktop lg:text-body-desktop"
+          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/5 lg:py-l-spacing-desktop lg:text-body-desktop"
         >
           Du kan vælge mellem 4 forskellige størrelser af buket; mini, lille,
           mellem og stor. Størrelsen har ingen påvirkning på designet af
@@ -368,7 +368,7 @@
       >
         <!-- CARD 1 -->
         <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+          class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
         >
           <div class="img_wrapper">
             <img
@@ -394,7 +394,7 @@
 
         <!-- CARD 2 -->
         <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+          class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
         >
           <div class="img_wrapper">
             <img
@@ -420,7 +420,7 @@
 
         <!-- CARD 3 -->
         <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+          class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
         >
           <div class="img_wrapper">
             <img
@@ -446,7 +446,7 @@
 
         <!-- CARD 4 -->
         <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+          class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
         >
           <div class="img_wrapper">
             <img
