--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -363,7 +363,7 @@
         </h1>
 
         <p
-          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/3 lg:py-l-spacing-desktop lg:text-body-desktop"
+          class="mx-auto w-11/12 py-l-spacing-mobile text-left font-font-body text-body-mobile lg:w-2/5 lg:py-l-spacing-desktop lg:text-body-desktop"
         >
           Vælg mellem 2 forskellige farvesammensætninger af din buket, så du kan
           få det tilpasset det til din stil! Du kan desuden også vælge om din
@@ -373,13 +373,15 @@
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <div class="lg:flex lg:gap-xxxl-spacing-desktop lg:pb-l-spacing-desktop">
+      <div
+        class="mx-8 place-content-center lg:flex lg:gap-xxxl-spacing-desktop lg:pb-l-spacing-desktop"
+      >
         <div class="lg:grid">
           <h2 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
             Vælg farvesammensætning
           </h2>
           <section
-            class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
+            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
           >
             <!-- CARD 1 -->
             <article
@@ -451,7 +453,7 @@
           </div>
 
           <section
-            class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
+            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
           >
             <!-- CARD 3 -->
             <article
