--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -23,7 +23,6 @@
       .overskrift {
         font-size: var(--abonnement-text-info);
         font-family: var(--font-body);
-        font-weight: var(--font-weight-bold);
       }
       .full_bar {
         display: flex;
@@ -75,26 +74,24 @@
 
       @media (min-width: 900px) {
         .overskrift {
-          font-size: var(--h4-desktop);
+          font-size: var(--body-desktop);
         }
+
+        .tal {
+          font-size: var(--body-desktop);
+        }
+
         .ball1,
         .ball2,
         .ball3,
         .ball4 {
-          width: 50px;
-          height: 50px;
+          width: 25px;
+          height: 25px;
           background-color: var(--color-kurv-bar-disabled);
           border-radius: 100%;
           font-family: var(--font-body);
           font-size: var(--h4-desktop);
-
           color: var(--color-kurv-bar-text);
-        }
-
-        .line3 {
-          width: 180px;
-          height: 0px;
-          border: 5px solid var(--color-kurv-bar-disabled);
         }
         .ball1,
         .ball2,
@@ -102,11 +99,13 @@
           background-color: var(--color-kurv-bar-active);
           z-index: 1;
         }
+
         .line1,
-        .line2 {
-          width: 180px;
+        .line2,
+        .line3 {
+          width: 115px;
           height: 0px;
-          border: 5px solid var(--color-kurv-bar-active);
+          background-color: var(--color-kurv-bar-active);
         }
       }
     </style>
@@ -309,7 +308,7 @@
               <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
               <div class="bar1">
                 <div class="ball1">
-                  <a href="kurv.html"><p>1</p></a>
+                  <a href="kurv.html"><p class="tal">1</p></a>
                 </div>
                 <div class="line1"></div>
               </div>
@@ -319,7 +318,7 @@
               <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
-                  <a href="information.html"><p>2</p></a>
+                  <a href="information.html"><p class="tal">2</p></a>
                 </div>
                 <div class="line2"></div>
               </div>
@@ -328,7 +327,7 @@
               <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
-                  <p>3</p>
+                  <p class="tal">3</p>
                 </div>
                 <div class="line3"></div>
               </div>
@@ -337,7 +336,7 @@
               <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
               <div class="bar4">
                 <div class="ball4">
-                  <p>4</p>
+                  <p class="tal">4</p>
                 </div>
               </div>
             </div>
