--- a/src/kurv.html
+++ b/src/kurv.html
@@ -23,7 +23,6 @@
       .overskrift {
         font-size: var(--abonnement-text-info);
         font-family: var(--font-body);
-        font-weight: var(--font-weight-bold);
       }
       .full_bar {
         display: flex;
@@ -35,7 +34,6 @@
       .bar3,
       .bar4 {
         display: flex;
-
         place-items: center;
       }
 
@@ -69,15 +67,19 @@
 
       @media (min-width: 900px) {
         .overskrift {
-          font-size: var(--h4-desktop);
+          font-size: var(--body-desktop);
+        }
+
+        .tal {
+          font-size: var(--body-desktop);
         }
 
         .ball1,
         .ball2,
         .ball3,
         .ball4 {
-          width: 50px;
-          height: 50px;
+          width: 25px;
+          height: 25px;
           background-color: var(--color-kurv-bar-disabled);
           border-radius: 100%;
           font-family: var(--font-body);
@@ -93,9 +95,9 @@
         .line1,
         .line2,
         .line3 {
-          width: 180px;
+          width: 115px;
           height: 0px;
-          border: 5px solid var(--color-kurv-bar-disabled);
+          border: 2px solid var(--color-kurv-bar-disabled);
         }
       }
     </style>
@@ -297,7 +299,7 @@
               <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
               <div class="bar1">
                 <div class="ball1">
-                  <a href="kurv.html"><p>1</p></a>
+                  <a href="kurv.html"><p class="tal">1</p></a>
                 </div>
                 <div class="line1"></div>
               </div>
@@ -307,7 +309,7 @@
               <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
-                  <p>2</p>
+                  <p class="tal">2</p>
                 </div>
                 <div class="line2"></div>
               </div>
@@ -316,7 +318,7 @@
               <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
-                  <p>3</p>
+                  <p class="tal">3</p>
                 </div>
                 <div class="line3"></div>
               </div>
@@ -325,7 +327,7 @@
               <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
               <div class="bar4">
                 <div class="ball4">
-                  <p>4</p>
+                  <p class="tal">4</p>
                 </div>
               </div>
             </div>
