--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -125,7 +125,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header class="mb-l-spacing-mobile">
       <div
         class="grid gap-0.5 bg-rust-400 py-1 text-center font-font-body text-abonnement-text-info font-medium text-color-black lg:flex lg:justify-around lg:text-body-mobile"
       >
@@ -309,7 +309,138 @@
     <main
       class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
     >
-      <section>
+      <!-- sektion 1  TAK -->
+      <section class="mx-[30px]">
+        <!-- progress bar -->
+        <article
+          class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
+        >
+          <div class="full_bar">
+            <div>
+              <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
+              <div class="bar1">
+                <div class="ball1">
+                  <a href="kurv.html"><p class="tal">1</p></a>
+                </div>
+                <div class="line1"></div>
+              </div>
+            </div>
+
+            <div>
+              <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
+              <div class="bar2">
+                <div class="ball2">
+                  <a href="information.html"><p class="tal">2</p></a>
+                </div>
+                <div class="line2"></div>
+              </div>
+            </div>
+            <div>
+              <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
+              <div class="bar3">
+                <div class="ball3">
+                  <p class="tal">3</p>
+                </div>
+                <div class="line3"></div>
+              </div>
+            </div>
+            <div>
+              <p class="overskrift -ml-1 lg:-ml-9">Tak!</p>
+              <div class="bar4">
+                <div class="ball4">
+                  <p class="tal">4</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- tekst -->
+        <article class="pb-l-spacing-mobile">
+          <h1
+            class="text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h1-desktop"
+          >
+            Tak for dit køb!
+          </h1>
+          <p
+            class="pt-s-spacing-mobile font-font-body text-abonnement-text-info"
+          >
+            Vi sætter stor pris på at du har valgt at bestille dit abonnement
+            hos Blomster Bjarne. Vi håber, at du/I bliver glade for jeres nye
+            blomsterabonnement! Du vil snart modtage en ordrebekræftelse på SMS
+            og/eller e-mail.
+          </p>
+        </article>
+      </section>
+
+      <!-- sektion 2  ORDREOVERSIGT -->
+      <section class="mx-[30px] grid gap-s-spacing-mobile">
+        <!-- ordreoversigt -->
+        <article>
+          <!-- overskrift -->
+          <div class="mb-s-spacing-mobile">
+            <h2 class="font-other-headings text-h3-mobile font-bold">
+              Din ordre #100342
+            </h2>
+            <div class="border-[0.5px] border-color-black"></div>
+          </div>
+          <!-- ordreoversigt -->
+          <div class="mb-s-spacing-mobile font-font-body text-body-mobile">
+            <div class="grid gap-xxs-spacing-mobile">
+              <p class="font-bold">Blomsterabonnement</p>
+              <p>Lille</p>
+              <p>Neutral og tæt</p>
+              <p>Ikke sensitiv</p>
+              <p>Hver anden uge</p>
+            </div>
+          </div>
+        </article>
+
+        <!-- informationsoversigt -->
+        <article>
+          <!-- overskrift -->
+          <div class="mb-s-spacing-mobile">
+            <h2 class="font-other-headings text-h3-mobile font-bold">
+              Dine informationer
+            </h2>
+            <div class="border-[0.5px] border-color-black"></div>
+          </div>
+          <!-- priser -->
+          <div class="mb-s-spacing-mobile font-font-body text-body-mobile">
+            <div class="grid gap-xxs-spacing-mobile">
+              <div>
+                <p class="font-bold">Navn</p>
+                <p>Sofie Larsen</p>
+              </div>
+              <div>
+                <p class="font-bold">Adresse</p>
+                <p>
+                  Strandvejen 167 <br />
+                  2900 Hellerup, Danmark
+                </p>
+              </div>
+              <div>
+                <p class="font-bold">E-mail</p>
+                <p>sofie@gmail.com</p>
+              </div>
+              <div>
+                <p class="font-bold">Telefonnummer</p>
+                <p>+45 12345678</p>
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <div class="flex place-content-center">
+          <a
+            tabindex="0"
+            class="mx-auto mt-s-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            href="index.html"
+            >Tilbage til forsiden</a
+          >
+        </div>
+      </section>
+
+      <!-- <section>
         <article>
           <h1
             class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
@@ -556,7 +687,7 @@
             </div>
           </article>
         </section>
-      </div>
+      </div> -->
     </main>
     <footer
       tabindex="0"
