--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -333,7 +333,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
+              <p class="overskrift -ml-1 lg:-ml-9">Tak!</p>
               <div class="bar4">
                 <div class="ball4">
                   <p class="tal">4</p>
@@ -495,158 +495,6 @@
       </section>
     </main>
 
-    <!-- <main
-      class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
-    >
-      <section>
-        <article>
-          <h1
-            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h2-desktop"
-          >
-            Kreditkort
-          </h1>
-        </article>
-        <article
-          class="grid place-content-center pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop"
-        >
-          <div class="full_bar">
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
-              <div class="bar1">
-                <div class="ball1">
-                  <a href="kurv.html"><p>1</p></a>
-                </div>
-                <div class="line1"></div>
-              </div>
-            </div>
-
-            <div>
-              <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
-              <div class="bar2">
-                <div class="ball2">
-                  <a href="information.html"><p>2</p></a>
-                </div>
-                <div class="line2"></div>
-              </div>
-            </div>
-            <div>
-              <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
-              <div class="bar3">
-                <div class="ball3">
-                  <a href="betal.html"><p>3</p></a>
-                </div>
-                <div class="line3"></div>
-              </div>
-            </div>
-            <div>
-              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
-              <div class="bar4">
-                <div class="ball4">
-                  <p>4</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-      </section>
-
-      <section>
-        <article>
-          <div class="py-s-spacing-mobile lg:flex">
-            <a
-              class="font-font-body text-abonnement-text-spand underline opacity-50 hover:opacity-100 lg:text-body-mobile"
-              href="betal.html"
-              >Tilbage</a
-            >
-          </div>
-
-          <form
-            class="lg:flex lg:place-content-center lg:gap-40 lg:pb-xl-spacing-desktop"
-            action="udfyld"
-          >
-            <div class="">
-              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h2
-                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                >
-                  Fulde navn kortholder <span class="text-rust-500">*</span>
-                </h2>
-                <label for="betaling">
-                  <input
-                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                    type="text"
-                    value=""
-                    placeholder="Fx. Sofie Larsen"
-                  />
-                </label>
-              </div>
-              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h2
-                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                >
-                  Kortnummer <span class="text-rust-500">*</span>
-                </h2>
-                <label for="betaling">
-                  <input
-                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                    type="text"
-                    value=""
-                    placeholder="Fx. 1234 1234 1234 1234"
-                  />
-                </label>
-              </div>
-            </div>
-
-            <div class="flex gap-10 lg:flex-col lg:gap-0">
-              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h2
-                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                >
-                  Udløbsdato <span class="text-rust-500">*</span>
-                </h2>
-                <label for="betaling">
-                  <input
-                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                    type="text"
-                    value=""
-                    placeholder="MM / ÅÅ"
-                  />
-                </label>
-              </div>
-              <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
-                <h2
-                  class="pb-xs-spacing-mobile font-other-headings text-h4-mobile font-medium lg:pb-s-spacing-desktop lg:text-h4-desktop"
-                >
-                  Kontrolcifre <span class="text-rust-500">*</span>
-                </h2>
-                <label for="betaling">
-                  <input
-                    class="w-full font-font-body text-body-mobile lg:text-body-desktop"
-                    type="text"
-                    value=""
-                    placeholder="CVC"
-                  />
-                </label>
-              </div>
-            </div>
-          </form>
-          <div class="flex gap-5 lg:place-content-center">
-            <input class="h-8 w-8" type="checkbox" />
-            <h3 class="font-font-body text-body-mobile lg:text-body-desktop">
-              Jeg har læst og accepterer vilkår og betingelser
-            </h3>
-          </div>
-          <div class="py-xl-spacing-mobile lg:py-xl-spacing-desktop">
-            <a
-              tabindex="0"
-              class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/4 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-              href="betal_bekraeft.html"
-              >Betal</a
-            >
-          </div>
-        </article>
-      </section>
-    </main> -->
     <footer
       tabindex="0"
       class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
