--- a/src/information.html
+++ b/src/information.html
@@ -332,7 +332,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
+              <p class="overskrift -ml-1 lg:-ml-9">Tak!</p>
               <div class="bar4">
                 <div class="ball4">
                   <p class="tal">4</p>
