--- a/src/kurv.html
+++ b/src/kurv.html
@@ -309,7 +309,7 @@
               <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
-                  <p class="tal">2</p>
+                  <a href="information.html"><p class="tal">2</p></a>
                 </div>
                 <div class="line2"></div>
               </div>
@@ -324,7 +324,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
+              <p class="overskrift -ml-1 lg:-ml-9">Tak!</p>
               <div class="bar4">
                 <div class="ball4">
                   <p class="tal">4</p>
