--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -376,16 +376,16 @@
       <div
         class="mx-8 place-content-center lg:flex lg:gap-xxxl-spacing-desktop lg:pb-l-spacing-desktop"
       >
-        <div class="lg:grid">
+        <div>
           <h2 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
             Vælg farvesammensætning
           </h2>
           <section
-            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
+            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-m-spacing-desktop"
           >
             <!-- CARD 1 -->
             <article
-              class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -405,7 +405,7 @@
 
             <!-- CARD 2 -->
             <article
-              class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -425,7 +425,7 @@
           </section>
         </div>
 
-        <div class="lg:grid">
+        <div class="gap-m-spacing-desktop">
           <div class="flex gap-xxxs-spacing-mobile">
             <h2 class="pb-s-spacing-mobile font-other-headings text-h5-mobile">
               Vælg tæthed
@@ -453,11 +453,11 @@
           </div>
 
           <section
-            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-xxs-spacing-mobile"
+            class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:gap-m-spacing-desktop"
           >
             <!-- CARD 3 -->
             <article
-              class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
@@ -477,7 +477,7 @@
 
             <!-- CARD 4 -->
             <article
-              class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
+              class="card max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-110 lg:max-w-abb-card-desktop"
             >
               <div class="img_wrapper">
                 <img
