--- a/src/blomster.html
+++ b/src/blomster.html
@@ -1584,15 +1584,6 @@
         </section>
       </article>
     </footer>
-    <script>
-      const wrappers = document.querySelectorAll(".article_wrapper");
-      const elements = document.querySelectorAll(".flip");
-
-      wrappers.forEach((wrapper, index) => {
-        wrapper.addEventListener("click", () => {
-          elements[index].classList.toggle("article_info");
-        });
-      });
-    </script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
